# Apartment_Price_Visor

./: .gitignore  README.md  main.py  pyproject.toml
.dvc/: config
data/processed/move_ru/: listings_clean.parquet.dvc  listings_rejected.parquet.dvc
src/apartment_price_visor/: config.py  main.py
src/apartment_price_visor/api/: inference_api.py
src/apartment_price_visor/bots/: telegram_estimator_bot.py
src/apartment_price_visor/models/: infer_tabular_model.py  similar_ads.py  train_tabular_model.py
src/apartment_price_visor/pipelines/: update_moveru_raw.py
src/apartment_price_visor/preprocessing/: build_dataset.py  prepare_train_datasets.py  schema.py
src/apartment_price_visor/scrapers/: movero_listings_search.py  moveru_image_download.py  moveru_listing_scrape.py
src/apartment_price_visor/storage/: __init__.py  s3.py
src/apartment_price_visor/utils/: dvc.py
tests/: test_moveru_image_download.py  test_s3_storage.py
