[project]
name = "apartment-price-visor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3<1.42.74",
    "catboost>=1.2.10",
    "dvc>=3.67.0",
    "dvc-s3>=3.3.0",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
